--- a/serverless-framework-examples/package.json
+++ b/serverless-framework-examples/package.json
@@ -18,7 +18,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "local:main": "sls offline start",
+    "local:admin": "sls offline start -c ./admin-serverless.yaml"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -26,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
+    "dayjs": "^1.11.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -35,6 +38,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@serverless/typescript": "^3.27.0",
+    "@types/aws-lambda": "^8.10.114",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
