--- a/serverless-framework-examples/package.json
+++ b/serverless-framework-examples/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.3.2",
     "serverless-layers": "^2.6.1",
     "serverless-offline": "^12.0.4",
+    "serverless-with-cloudfront": "^0.0.9",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
